# ReViewPoint

./: .coveragerc  .gitattributes  .gitignore  .prettierignore  .ruff.toml  BUTTON_AUDIT_CHECKLIST.md  BUTTON_FIX_SUMMARY.md  BUTTON_STANDARDS.md  DEVELOPMENT.md  LICENSE  LINTING_PROGRESS_REPORT.md  README.md  SAFETY_IMPLEMENTATION_SUMMARY.md  SECURITY_FIX_REPORT.md  VSCODE_SETUP_COMPLETE.md  alembic.ini  biome_linting_analysis.md  check_db_tables.py  conftest.py  debug-backend.cjs  debug_test_isolation.py  debug_user_creation.py  diagnose_test_isolation.py  docs_architecture_analysis_and_plan.md  fix_test_isolation.py  generate_missing_docs.py  mkdocs.yml  mypy.ini  openapi.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  test-auth-endpoint.js  test-backend-feature-flags.py  test-direct-login.py  test-feature-flags-detailed.py  test-feature-flags.py  test-hook.txt  test-registration.json  (+8 more)
backend/: .env.template  FAST_TEST_CLEANUP_SOLUTION.md  README.md  TESTING.md  TEST_LOGGING.md  __init__.py  alembic.ini  check_alembic_table.py  check_db_direct.py  check_db_state.py  check_openapi.py  check_tokens_table.py  config.py  debug_alembic_detailed.py  debug_api_key.py  debug_fast_env.py  debug_test_exact.py  docker-compose.test.yml  docker-compose.yml  main.py  manual_alembic_setup.py  mypy.ini  pyproject.toml  pytest.ini  run-fast-tests.py  run_upload_tests.ps1  set-test-log-level.py  test.py  test_db_connection.py  test_manual_table_creation.py  verify_conditional_skip.py
backend/alembic/: env.py
backend/alembic/versions/: 9fc3acc47815_initial_migration_users_and_files_tables.py
backend/alembic_migrations/: env.py
backend/alembic_migrations/versions/: 20250602_add_is_deleted_to_users.py  9fc3acc47815_initial_migration_users_and_files_tables.py
backend/api/: routes.py
backend/config/: .env.template
backend/core/: config.py  database.py  logging.py  security.py
backend/core/typings/: jose.pyi
backend/deployment/: docker-compose.test.yml  docker-compose.yml
backend/deployment/docker/: Dockerfile  Dockerfile.dev  README.md  db-migrate.sh  docker-compose.prod.yml  docker-entrypoint.sh  dockerfile.prod  dockerfile.shell  entrypoint.sh
backend/docker/: Dockerfile
backend/middlewares/: logging.py
backend/models/: base.py  file.py  user.py
backend/repositories/: user.py
backend/schemas/: module_result.py  upload.py
backend/services/: logger.py  module_runner.py
backend/src/: __about__.py  main.py
backend/src/alembic_migrations/: alembic.ini  env.py
backend/src/api/: deps.py  deps.py.md
backend/src/core/: __init__.py  app_logging.py  app_logging.py.md  config.py  config.py.md  database.py  database.py.md  documentation.py  documentation.py.md  events.py  events.py.md  feature_flags.py  feature_flags.py.md  logging.py  openapi.py  openapi.py.md  secure_bytes.py  security.py  security.py.md  sync_database.py  sync_database.py.md
backend/src/middlewares/: logging.py
backend/src/models/: __init__.py  base.py  blacklisted_token.py  file.py  used_password_reset_token.py  user.py
backend/src/repositories/: blacklisted_token.py  file.py  user.py
backend/src/schemas/: auth.py  blacklisted_token.py  file.py  token.py  user.py
backend/src/services/: upload.py  user.py
backend/src/static/: swagger-custom.css
backend/src/tests/: conftest.py
backend/src/utils/: cache.py  datetime.py  environment.py  errors.py  file.py  file_revocation.py  filters.py  hashing.py  http_error.py  rate_limit.py  validation.py
backend/test_isolation_backups/models/: test_file.py  test_used_password_reset_token.py  test_user.py
backend/testing/docs/: TESTING.md
backend/testing/fast/: conftest.py  pytest.ini
backend/testing/scripts/: run-fast-tests-legacy.py  run-fast-tests.py  test.py  validate-setup.py
backend/tests/: README.md  UPLOAD_TESTS_OPTIMIZATION.md  conftest.py  conftest_fast.py  factories.py  test_data_generators.py  test_fast_setup.py  test_isolation_utils.py  test_main.py  test_markers.py  test_module_runner.py  test_routes.py  test_templates.py
backend/tests/alembic/: test_env.py
backend/tests/alembic_migrations/: __init__.py  test_alembic_env.py  test_env.py
backend/tests/api/: test_deps.py
backend/tests/core/: test_config.py  test_database.py  test_database_coverage.py  test_db_coverage_simple.py  test_documentation.py  test_events.py  test_logging.py  test_main.py  test_openapi.py  test_pydantic_env.py  test_security.py
backend/tests/integration/: test-auth-endpoint.cjs  (+9 more)
backend/utils/: hashing.py  logging_config.py
docs/: .markdownlint-ignore  .markdownlint.json  .prettierignore  README.md  _TEMPLATE.md  architecture.md  backend-source-guide.md  database-implementation.md  dev-guidelines.md  faq.md  file-overview.md  index.md  llm-integration.md  main.py.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  setup.md  test-instructions.md
docs/backend/: _TEMPLATE.md  database-implementation.md  index.md  main.py.md  test-instructions.md
docs/content/: 404.md  api-reference.md  architecture.md  backend-source-guide.md  contributing-docs.md  current-status.md  database-implementation.md  dev-guidelines.md  developer-overview.md  faq.md  file-overview.md  future-goals.md  index.md  installation.md  llm-integration.md  main.py.md  plugins.md  setup.md  test-instructions.md  test-log-levels-implementation.md  test-log-levels.md  vision-mission-goals.md  vscode-tasks-safety-guide.md
docs/development/: API_DOCUMENTATION_ENHANCEMENT_COMPLETE.md  API_REFACTOR_SUMMARY.md  BUTTON_STANDARDIZATION_SUMMARY.md  BUTTON_STANDARDS.md  CONTRIBUTING.md  DOCKER-GUIDE.md  FAST_TEST_CLEANUP_SOLUTION.md  IDE_IMPLEMENTATION_SUMMARY.md  JWT_REFRESH_IMPLEMENTATION_SUMMARY.md  PHASE_2.2_API_TYPES_PLAN.md  PHASE_5.2_IMPLEMENTATION_DETAILED_PLAN.md  POSTGRES_AUTO_SETUP_SUMMARY.md  UPLOAD_TESTS_OPTIMIZATION.md  VSCODE_TASKS_UPDATED.md  api_integration_guide.md
docs/overrides/: 404.html
docs/planning/: PHASE_0.5_SETUP.md  PHASE_2.4_DESIGN_SYSTEM_DOCS.md  PHASE_5_IMPLEMENTATION_PLAN.md
docs/reports/: TEST_ISOLATION_FINAL_REPORT.md
(+985 files in other folders)
