[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewpoint"
version = "0.1.0"
description = "Modular platform for academic paper evaluation using LLMs and rule-based algorithms."
authors = [{ name = "filip-herceg", email = "pvt.filip.herceg@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

[tool.hatch]
# Root-level config for monorepo, can be extended as needed

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]
