[project]
name = "reviewpoint"
version = "0.1.0"
description = "Root monorepo tools and docs for ReViewPoint"
authors = ["Filip Herceg"]

[tool.poetry]
name = "reviewpoint-root"
version = "0.1.0"
description = "Root monorepo tools and docs for ReViewPoint"
authors = ["Filip Herceg"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.13"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
types-python-jose = "*"

[project.optional-dependencies.dev]
types-python-jose = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
