[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewpoint"
version = "0.1.0"
description = "Modular platform for academic paper evaluation using LLMs and rule-based algorithms."
authors = [{ name = "filip-herceg", email = "pvt.filip.herceg@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

[tool.hatch]
# Root-level config for monorepo, can be extended as needed

[tool.hatch.build.targets.wheel]
packages = ["backend/src"]

[tool.hatch.envs.project]
path = ".venv"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["backend/src"]
markers = [
    "jwt: mark tests that require JWT handling",
    "performance: marks tests as performance (deselect with '-m \"not performance\"')"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]
