[tool.poetry]
name = "reviewpoint-backend"
version = "0.1.0"
description = "Core backend API for ReViewPoint"
authors = ["Filip Herceg"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
loguru = "^0.7"
pydantic = "^2.6"
pydantic-settings = "^2.9.1"
python-dotenv = "^1.0"
httpx = "^0.27"
jinja2 = "^3.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["pbkdf2"], version = "^1.7.4"}
python-multipart = "^0.0.20"
alembic = "^1.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"
pytest-cov = "^6.1.1"
coverage = "^7.4"
ruff = "^0.4"
black = "^24.4"
mypy = "^1.10"
freezegun = "^1.5.1"

[tool.coverage.run]
branch = true
source = [
    "api",
    "services",
    "schemas",
    "core",
    "repositories",
    "models",
    "middlewares",
    "utils"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80  # optional: schlägt fehl unter 80 % Coverage

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

