# ---
# ReViewPoint Documentation Project — pyproject.toml
#
# This file configures the Python project for the documentation module.
#
# - All documentation content (Markdown, images, etc.) is in `content/` and `overrides/`.
# - No Python package or tests are present; this is a docs-only project.
# - Environment management is handled by Hatch, using a local .venv for reproducibility.
#
# See README.md for details.
# ---

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs"
version = "0.1.0"
description = "ReViewPoint documentation and developer manual."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["documentation", "mkdocs", "reviewpoint"]
authors = [
  { name = "filip-herceg", email = "pvt.filip.herceg@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/filip-herceg/docs#readme"
Issues = "https://github.com/filip-herceg/docs/issues"
Source = "https://github.com/filip-herceg/docs"

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "markdownlint-cli2",
    "prettier",
]
