# ---
# ReViewPoint Documentation Project — pyproject.toml
#
# This file configures the Python project for the documentation module.
#
# - All documentation content (Markdown, images, etc.) is in `content/` and `overrides/`.
# - No Python package or tests are present; this is a docs-only project.
# - Environment management is handled by Hatch, using a local .venv for reproducibility.
#
# See README.md for details.
# ---

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewpoint-docs"
version = "0.1.0"
description = "ReViewPoint documentation and developer manual."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["documentation", "mkdocs", "reviewpoint"]
authors = [{ name = "filip-herceg", email = "pvt.filip.herceg@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/filip-herceg/ReViewPoint#readme"
Issues = "https://github.com/filip-herceg/ReViewPoint/issues"
Source = "https://github.com/filip-herceg/ReViewPoint"

[tool.hatch.envs.default]
path = ".venv"
skip-install = true
dependencies = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-glightbox>=0.3.0",
    "mkdocs-macros-plugin>=1.0.0",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-autorefs>=0.5.0",
    "griffe>=0.30.0",
]

[tool.hatch.envs.default.scripts]
serve = "mkdocs serve"
build = "mkdocs build"
clean = "mkdocs build --clean"

[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.build.targets.sdist]
exclude = ["/.venv", "/site", "/.git"]
